2-parameter KeypressCommand constructor missing replacement range initialization https://bugs.webkit.org/show_bug.cgi?id=315027

Reviewed by Ryosuke Niwa.

The KeypressCommand 2-parameter constructor was missing an initializer for
replacementRange, leaving its location at 0 (the CharacterRange default)
instead of WTF::notFound. executeKeypressCommandsInternal() interprets any
location other than WTF::notFound as an explicit replacement range, so it
was resetting the cursor to position 0 before every character insertion,
causing typed text to appear in reverse order.

* Source/WebCore/platform/KeypressCommand.h:
(WebCore::KeypressCommand::KeypressCommand):
* Tools/Scripts/webkitpy/api_tests/allowlist.txt:
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/TextExtractionTests.mm:
(TestWebKitAPI::(TextExtractionTests, KeyPressInsertsCharactersInOrder)):

Canonical link: https://commits.webkit.org/313470@main